--- a/.github/workflow/test-pipeline.yaml
+++ b/.github/workflow/test-pipeline.yaml
@@ -9,6 +9,7 @@ on:
     - master
 
 jobs:
+
   unit-tests:
     runs-on: ubuntu-20.04
 
@@ -24,6 +25,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run test
+
+  code-review:
+    - name: Coverage
+    uses: codecov/codecov-action@v4.0.1
+    env:
+      token: ${{ secrets.CODECOV_TOKEN }}
+      slug: kevi0x6e/nodejs-vulnerable
 
   deploy-test:
     needs: unit-tests
