--- a/.github/workflows/test-pipeline.yaml
+++ b/.github/workflows/test-pipeline.yaml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - develop/**
-
   workflow_dispatch:
   pull_request:
-    - master
+    branches:
+      - master
 
 jobs:
 
