ci(test-pipeline): adjustment dependenci

--- a/.github/workflows/test-pipeline.yaml
+++ b/.github/workflows/test-pipeline.yaml
@@ -45,7 +45,7 @@ jobs:
       - run: echo "Deploy"
 
   deploy-production:
-    needs: test-ci
+    needs: unit-tests
     if: github.ref == 'refs/heads/master'
 
     runs-on: ubuntu-20.04
