--- a/.github/workflows/test-pipeline.yaml
+++ b/.github/workflows/test-pipeline.yaml
@@ -30,14 +30,14 @@ jobs:
   deploy-test:
     needs: unit-tests
     if: startsWith(github.ref, 'refs/heads/develop/')
-    
+
     runs-on: ubuntu-20.04
     concurrency: deploy-to-test
     environment: test
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 10.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v2
         with:
           node-version: 18.x
@@ -46,7 +46,7 @@ jobs:
 
   deploy-production:
     needs: unit-tests
-    if: github.ref == 'refs/heads/master'
+    if: startsWith(github.ref, 'refs/heads/master')
 
     runs-on: ubuntu-20.04
     concurrency: deploy-to-production
@@ -54,7 +54,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 10.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v2
         with:
           node-version: 18.x
