--- a/.github/workflows/test-pipeline.yaml
+++ b/.github/workflows/test-pipeline.yaml
@@ -27,8 +27,33 @@ jobs:
     - run: npm ci
     - run: npm run test
 
-  deploy-test:
+code-review:
+    runs-on: ubuntu-20.04
     needs: unit-tests
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.x
+
+      - run: npm ci
+
+      - name: Run ESLint
+        run: npx eslint .
+
+        uses: codecov/codecov-action@v2
+
+      - name: Run ESLint with coverage
+        run: npm run lint:coverage
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  deploy-test:
+    needs: [unit-tests, code-review]
     if: startsWith(github.ref, 'refs/heads/develop/')
 
     runs-on: ubuntu-20.04
@@ -45,7 +70,7 @@ jobs:
       - run: echo "Deploy"
 
   deploy-production:
-    needs: unit-tests
+    needs: [unit-tests, code-review]
     if: startsWith(github.ref, 'refs/heads/master')
 
     runs-on: ubuntu-20.04
