--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index.js ",
-    "test": "jest"
+    "test": "jest",
+    "lint:coverage": "eslint ."
   },
   "keywords": [
     "github",
@@ -18,6 +19,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
     "jest": "^29.7.0"
   }
 }
