ci(test-pipeline): change condition

--- a/.github/workflows/test-pipeline.yaml
+++ b/.github/workflows/test-pipeline.yaml
@@ -68,7 +68,7 @@ jobs:
 
   deploy-production:
     needs: [unit-tests, code-review]
-    if: startsWith(github.ref, 'refs/heads/master') && github.event_name == 'pull_request'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'pull_request'
 
     runs-on: ubuntu-20.04
     concurrency: deploy-to-production
