--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -11,21 +11,8 @@ on:
 
 jobs:
 
-  unit-tests:
-    runs-on: ubuntu-20.04
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 18.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: 18.x
-    - run: npm ci
-    - run: npm run test
-
   code-review:
     runs-on: ubuntu-20.04
-    needs: unit-tests
 
     steps:
       - name: Checkout code
@@ -48,6 +35,34 @@ jobs:
         run: npm run lint:coverage
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  unit-tests:
+    runs-on: ubuntu-20.04
+    needs: code-review
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js 18.x
+      uses: actions/setup-node@v2
+      with:
+        node-version: 18.x
+    - run: npm ci
+    - run: npm run test
+
+  sca:
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    
+    steps:
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: master
 
   deploy-test:
     needs: [unit-tests, code-review]
