--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "4.8.8"
+    "express": "^4.18.2"
   }
 }
