--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - master
-    types: [closed]
+  types: [opened, synchronize, reopened, closed]
 
 jobs:
 
