--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -65,8 +65,9 @@ jobs:
           ref: master
 
   sast:
-    runs-on: ubuntu-latest
     needs: sca
+
+    runs-on: ubuntu-latest
     
     container:
       image: returntocorp/semgrep
@@ -88,6 +89,28 @@ jobs:
         uses: actions/download-artifact@v2
         with: 
           name: report.sarif
+  
+  zap_scan:
+    needs: [sca, sast]
+    if: github.ref == 'refs/heads/master' 
+
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: master
+
+      - name: ZAP Scan
+        uses: zaproxy/action-api-scan@v0.6.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          format: openapi
+          target: 'https://www.zaproxy.org/'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
 
   deploy-test:
     needs: sast
@@ -108,8 +131,8 @@ jobs:
       - run: echo "Deploy"
 
   deploy-production:
-    needs: deploy-test
-    
+    needs: [unit-tests, code-review]
+
     if: github.ref == 'refs/heads/master' && github.event.pull_request.merged == true
 
     runs-on: ubuntu-20.04
