--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -91,8 +91,9 @@ jobs:
           name: report.sarif
   
   dast:
+    if: github.ref == 'refs/heads/master' || github.event_name == 'pull_request'
+
     needs: [sca, sast]
-    if: github.ref == 'refs/heads/master' 
 
     runs-on: ubuntu-latest
     
