--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,10 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/src" }] }
+{
+    "version": 2,
+    "name": "nodejs-vulnerable",
+    "builds": [
+       { "src": "app.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+       { "src": "./src/(.*)", "dest": "/src/app.js" }
+    ]
+ }
