--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "name": "nodejs-vulnerable",
     "builds": [
-       { "src": "app.js", "use": "@vercel/node" }
+        { "src": "src/index.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "./(.*)", "dest": "/src/app.js" }
+        { "src": "/(.*)", "dest": "src/index.js" }
     ]
- }
+}
