--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Kevin",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "4.8.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
